content/style/components/_dashboard.scss
@import "variables";
@import "dratamixins";

@font-face {
  font-family: akashi;
  src: url('../fonts/Akashi.ttf');
}

.logo {
  @include logo(45px);
  padding:0 10px;
  background-color : $orange_base;
}

.ui-sortable-placeholder {
  //background-color: #E5E0E0;
  visibility: visible !important;
  height: auto;
  width: 100%; 
}

.postfix.giant, input.giant{
  height: 3.5rem;
  font-size: 1rem;
  line-height: 3rem;
}

.loading{
  background-image: url('/images/loading.gif');
  background-position: 50% 50%;
  background-repeat: no-repeat;
  width:100%;
  .widgetContent, numeric-chart {
    visibility:hidden;
  }
}

.ui-sortable-placeholder * {
  visibility: hidden; }

/*widget css*/
.widget-outer{
  padding:.5rem;
  float:left;
  width:0;
  transition: width .5s;
  min-width:200px;
}
.widget-size-1{
  width:25%;
}
.widget-size-2{
  width:50%;
}
.widget-size-3{
  width:75%;
}
.widget-size-4{
  width:100%;
}
.widget-size-5{
  width:33.333%;
}
.widget-size-6{
  width:66.666%;
}

.widget-content {
  height:300px;
}

/*widget topbar*/
.action-icon.edit-widget{
  color:#368a54;
}

.action-icon.remove-widget{
  color:#f04124;
}

/*widget topbar*/
/*widger nav*/

.widget-nav {
  border-bottom:1px dashed #ccc;
  height:30px;

  .title {
    line-height: 2rem;
    margin: 0 50px 0 25px;
    overflow: hidden;
    float: left;
  }
  .actions {
    position: absolute;
    right:0;
    z-index: 9;
  }
  .title-edit {
    position: relative;
    top:2px;
  }
  .widget-logo {
    position:absolute;
    left:5px;
    top:7px;
  }
  &:hover {
    .widget-actions {
      opacity: 1;
    }
  }
}

ul.widget-nav-list{
  margin:0;
  border:none;
  list-style: none;
}

ul.widget-nav-list li{
  list-style: none;
  float:left;
  display:block;
  line-height: 2rem;
}

ul.widget-nav-list li.divider:after{
  content:'.';
  visibility: hidden;
}

ul.widget-nav-list li.action-icon{
  padding:0 5px;
}

.widget-footer {
  border-top:1px dashed #ccc;
  height:30px;
  line-height: 25px;
  color: #a6a6a6;
}

.auto-refresh {
  float: right;
}

.auto-refresh {
  input.timeframe, button.timeframe {
    margin: 0;
    height: 25px;
    padding: 5px;
    display: inline-block;
    line-height: 15px;
  }

  input.timeframe {
    width: 50px;
  }

  button.timeframe {
    border: 1px solid #ccc;
    border-left: 0;
    margin-left: -5px;
    width: 30px;
  }
}

span.widget-switch {
  line-height: 2rem;
  margin: 0 5px;
}

.widget-switch.and-on {
  color: #008cba;
}

.widget-select-option {
  max-width: 200px;
  height: 23px;
  margin: 3px 5px 0 0;
  padding: 0 5px;
  background-color: #fff;
}

.widget-select-option.and-dimension {
  width: 55px;
}
.widget-actions {
  position: absolute;
  top:0;
  opacity: 0;
  width:100%;
  transition: all .5s;
  background: #fff;
  padding: 2px 10px;
}

.widget-wrapper{
  width:100%;
  background-color: #fff;
  position: relative;
  .chk-dd-label {
    border-top: none;
    border-left: none;
    border-right: none;
  }
  &:hover {
    .action-icon{
      opacity:1;
    }
  }
  .action-icon{
    opacity:.2;
    transition:all .5s;
  }
  &:last-child{
    float:right;
  }
}
/*widget nav*/


@media only screen and (max-width: 767px) {
  .ui-sortable-placeholder {
    width: 100%; }
  .widget-size-1{
    width:100%;
  }
  .widget-size-2{
    width:100%;
  }
  .widget-size-3{
    width:100%;
  }
  .widget-size-4{
    width:100%;
  }
  .widget-size-5{
    width:100%;
  }
  .widget-size-6{
    width:100%;
  }
}

/******/

span.error{
  padding:0.375rem 0;
  font-size:.7rem;
  background:transparent;
  color : #f04124;
  margin: -5px 0 -2px;
  font-weight: bold;
}
input.error {
  border:1px solid #f04124;
}
/******/

[class^="fa-"].primary, [class*=" fa-"].primary {
  color:#008cba;
}
/*topbar*/

.top-bar .top-bar-text {
    padding:0 12px;
    line-height: 45px;
    background-color: #f5f5f5;
    border-radius: 5px 5px 0 0;
    font-size: .9rem;
}

.top-bar-section .dropdown li.has-form .button {
  height: auto;
  line-height: 1rem;
}
/*end topbar */


/**dashboard settings**/

  .dashboard-settings li.theme select {
      width: 100px;
      margin-bottom: 8px;
      top: 0;
  }
/**end dashboard settings**/

.widget-manager {
  max-width:62rem;
  margin:0 auto;
}

